Add about me section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,21 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div id="aboutMe">
+            <div>
+                <h2>About Me</h2>
+                <p>Hello, I'm Victor Luna. Data & AI Engineer with experience in designing and implementing end-to-end data and advanced analytics solutions in the cloud. Specialized in data engineering, statistical analysis, visualization, and machine learning models. 
+                    <br>
+                     I have worked in collaborative environments alongside data scientists and data engineers, participating in the construction of scalable pipelines, ETL/ELT processes, data validation, and the generation of actionable insights for the business. I have experience integrating data from APIs, databases, and enterprise systems (SAP, Oracle), as well as in the development of analytical projects oriented towards real-world cases.
+                    <br>
+                     I have an analytical mindset, a focus on data quality and automation, and a keen interest in solutions that integrate Data Engineering + AI to enable data-driven decision making.
+                    </p>
+            </div>
+        </div>
+        <div id="projects"></div>
+        <div id="skills"></div>
+        <div id="contact"></div>
+    </main>
 </body>
 </html>
