Add content to HTML

--- a/index.html
+++ b/index.html
@@ -31,9 +31,35 @@
                     </p>
             </div>
         </div>
-        <div id="projects"></div>
-        <div id="skills"></div>
-        <div id="contact"></div>
+        <div id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li>Pipeline end-to-end data analytics</li>
+                <li>Data science: Data exploration and model selection for Space X rockets</li>
+                <li>Project 3</li>
+            </ul>
+        </div>
+        <div id="skills">
+            <h2>Skills</h2>
+            <div class="flex-skills">
+                <div class="skill-item">Python <img src="./src/logotipo-de-python-language.png" alt="python"></div>
+                <div class="skill-item">SQL <img src="./src/bases-de-datos.png" alt="SQL"></div>
+                <div class="skill-item">Big data <img src="./src/servidor-sql.png" alt="Big Data"></div>
+                <div class="skill-item">Machine Learning <img src="./src/machine-learning.png" alt="machine-learning"></div>
+                <div class="skill-item">Data Visualization <img src="./src/monitor.png" alt="Data Visualization"></div>
+            </div>
+        </div>
+        <div id="contact">
+            <h2>Contact</h2>
+            <div class="contact-items">
+                <div class="contact-item"><img src="./src/linkedin.png" alt="LinkedIn"></div>
+                <div class="contact-item"><img src="./src/github.png" alt="github"></div>
+                <div class="contact-item"><img src="./src/correo-electronico.png" alt="Email"></div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <p>&copy; 2026 Victor Luna. All rights reserved.</p>
+    </footer>
 </body>
 </html>
